--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,18 @@
-<h1>
-  {{title}}
-</h1>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" routerLink="">{{title}}</a>
+    </div>
+    <ul class="nav navbar-nav navbar-right">
+      <li><a href="#">New</a></li>
+      <li><a href="#">Comments</a></li>
+      <li><a href="#">Show</a></li>
+      <li><a href="#">Ask</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Submit</a></li>
+    </ul>
+  </div>
+</nav>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
