--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,14 +5,14 @@
     </div>
     <ul class="nav navbar-nav navbar-right">
       <li><a href="#">New</a></li>
-      <li><a href="#">Comments</a></li>
       <li><a href="#">Show</a></li>
       <li><a href="#">Ask</a></li>
       <li><a href="#">Jobs</a></li>
-      <li><a href="#">Submit</a></li>
+      <li><a href="#">Submit New Story</a></li>
     </ul>
   </div>
 </nav>
 <div class="container">
   <router-outlet></router-outlet>
+  <app-new-story></app-new-story>
 </div>
