add new story component and serive page and move dynamic stories to mock-stories page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,5 +14,5 @@
 </nav>
 <div class="container">
   <router-outlet></router-outlet>
-  <app-new-story></app-new-story>
+  <!-- <app-new-story></app-new-story> -->
 </div>
