--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div *ngFor="let story of stories">
+<div *ngFor="let story of stories | job:filterByJob"  >
   <h4><em>{{story.id}}. <img src="../assets/img/arrow.gif"/> {{story.title}}</em> <a href="{story.url}">({{story.url}})</a></h4>
   <h5>{{story.rank}} by {{story.username}}</h5>
 </div>
